--- a/package.json
+++ b/package.json
@@ -1,12 +1,35 @@
 {
-  "author": "Spotify",
-  "name": "web-api-auth-examples",
-  "description": "Basic examples of the Spotify authorization flows through OAuth 2",
-  "version": "0.0.1",
-  "dependencies": {
-    "cookie-parser": "1.3.2",
-    "express": "~4.0.0",
-    "querystring": "~0.2.0",
-    "request": "~2.34.0"
-  }
+  "name": "last.fm",
+  "version": "1.0.0",
+  "description": "A Spotify experiment",
+  "main": "index.js",
+  "dependencies": {},
+  "devDependencies": {
+    "bower-files": "^4.0.0",
+    "browser-sync": "^2.18.12",
+    "browserify": "^14.4.0",
+    "concat": "^1.0.3",
+    "cookie-parser": "^1.4.3",
+    "del": "^3.0.0",
+    "express": "^4.15.3",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-jshint": "^2.0.4",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
+    "jshint": "^2.9.5",
+    "querystring": "^0.2.0",
+    "request": "^2.81.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "scripts": {
+    "test": "test"
+  },
+  "keywords": [
+    "spotify"
+  ],
+  "author": "Hunter Parks, Guy Anderson",
+  "license": "ISC"
 }
