--- a/bower.json
+++ b/bower.json
@@ -22,5 +22,8 @@
     "jquery": "^3.2.1",
     "bootstrap": "^3.3.7",
     "moment": "^2.18.1"
+  },
+  "devDependencies": {
+    "chart.js": "^2.6.0"
   }
 }
