--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bower-files": "^4.0.0",
     "browser-sync": "^2.18.12",
     "browserify": "^14.4.0",
+    "chart.js": "^2.6.0",
     "concat": "^1.0.3",
     "cookie-parser": "^1.4.3",
     "del": "^3.0.0",
